# flexmind

./: BENCHMARKING_GUIDE.md  CLAUDE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  UPDATED_BENCHMARKING_SUMMARY.md  demo_entity_extractor.py  demo_text_preprocessor.py  main.py  pyproject.toml  run_benchmarks.py  test_chunker.py
archive/debug_scripts/: benchmarks.txt  check_ontonotes_data.py  debug_fastcoref_output.py  evaluate_fastcoref_basic.py  fastcoref_baseline_evaluation.py  fastcoref_baseline_fixed.py  fastcoref_ontonotes_evaluation.py  load_ontonotes_manual.py  ontonotes_parser.py  test_fastcoref_setup.py
archive/results/: fastcoref_baseline_results.json  fastcoref_baseline_results_fixed.json
benchmark_results/: quick_checkpoint.json
benchmark_results/full_conll2003/: flexmind_default.json  high_confidence.json  spacy_only.json
benchmark_results/full_suite/: config_high_confidence.json  config_hybrid.json  config_low_confidence.json  config_spacy_only.json  conll_data.json  dialog_data.json  sample_data.json
datasets/backstories/: adrian_mallory_finch.txt
docs/: DEVELOPMENT.md  SYSTEM_DESIGN.md
examples/: demo.py
flexmind/: __init__.py
flexmind/chunking/: __init__.py  coref_chunker.py
flexmind/core/extractors/: entities.py
flexmind/core/preprocessing/: text.py
flexmind/knowledge_graph/: __init__.py
flexmind/memory/: __init__.py
flexmind/utils/: __init__.py
ideas/: late_chunking_pronoun_resolution.md
notebooks/: conll2003_eda.ipynb
tests/benchmarks/: __init__.py  benchmark_entity_extractor.py  conll_data_loader.py  full_conll_benchmark.py  local_conll_loader.py  test_entity_benchmarks.py  utils.py
tests/unit/: debug_start_rule.py  debug_test.py  test_core_mechanism_failures.py  test_coref_chunker.py  test_coref_specific.py  test_entity_extractor.py  test_forced_failures.py  test_real_bugs_exposed.py  test_sentence_mapping_bugs.py  test_start_rule_bug.py  test_text_preprocessor.py
