[project]
name = "flexmind"
version = "0.1.0"
description = "Human-like memory mechanism inspired by 'Why We Remember'"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "FlexMind Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "spacy>=3.7.0",
    "pytest>=7.0.0",
    "en-core-web-sm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
