[project]
name = "flexmind"
version = "0.1.0"
description = "Human-like memory mechanism inspired by 'Why We Remember'"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "FlexMind Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core NLP
    "spacy>=3.7.0",
    "transformers>=4.30.0",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    # Knowledge Graph & Vector Store
    "neo4j>=5.0.0",
    "chromadb>=0.4.0",
    # API & Caching
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "redis>=4.5.0",
    # ML Utilities
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    # Testing
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-watch>=4.2.0",
    # Dataset loading
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    # SpaCy models
    "en-core-web-sm",
    "en-core-web-lg",
    # Development
    "ipykernel>=6.30.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmark tests",
]
